--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -14,14 +14,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/buttonlinlay">
+
+    </FrameLayout>
+
+    <LinearLayout
         style="?android:attr/buttonBarStyle"
+        android:id="@+id/buttonlinlay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -29,19 +38,19 @@
 
         <Button
             android:id="@+id/donate_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/donate_text"
-            style="?android:attr/buttonBarButtonStyle"/>
+            android:text="@string/donate_text" />
 
         <Button
             android:id="@+id/share_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/share_text"
-            style="?android:attr/buttonBarButtonStyle"/>
+            android:text="@string/share_text" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
