--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -19,7 +19,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/buttonlinlay">
+        app:layout_constraintBottom_toTopOf="@id/linearLayout">
 
     </FrameLayout>
 
