--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -2,6 +2,7 @@
 <resources>
     <string-array name="configuration">
         <item>Counter</item>
+        <item>Dice</item>
         <item>Timer</item>
     </string-array>
 </resources>
