--- a/app/src/main/res/drawable/ic_swipe_arrow_82dp.xml
+++ b/app/src/main/res/drawable/ic_swipe_arrow_82dp.xml
@@ -1,5 +1,5 @@
-<vector android:height="82dp" android:tint="@color/colorAccent"
+<vector android:height="82dp"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="82dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/colorPrimary" android:pathData="M8.59,16.34l4.58,-4.59 -4.58,-4.59L10,5.75l6,6 -6,6z"/>
+    <path android:fillColor="@color/md_black_1000" android:pathData="M8.59,16.34l4.58,-4.59 -4.58,-4.59L10,5.75l6,6 -6,6z"/>
 </vector>
