--- a/app/src/main/res/layout/timer_fragment_layout.xml
+++ b/app/src/main/res/layout/timer_fragment_layout.xml
@@ -10,9 +10,11 @@
         android:id="@+id/startstop"
         android:layout_width="92dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Button"
+        android:text="Start"
+        app:layout_constraintEnd_toEndOf="@+id/time"
         app:layout_constraintStart_toStartOf="@+id/time"
         app:layout_constraintTop_toBottomOf="@+id/time" />
 
@@ -26,18 +28,10 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="time"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/reset"
-        android:layout_width="91dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/time"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
 </android.support.constraint.ConstraintLayout>
